# laplacian-foveation

./: CMakeLists.txt  README.md  README_og.md  foveation_block.py  test.py
src/python_bindings/: __init__.py  conversions.cpp  conversions.h  smooth_foveation.cpp
